@@ -37,6 +37,10 @@ enum class PreferredAuthMethod(@JvmField val code: Int, @JvmField val value: Str
 
     /**
      * QR code + PIN authentication.
+     * QR + PIN Authentication, is possible in MSAL only and MSAL with Broker flows.
+     * By default broker flows will have the capability to use QR code + PIN authentication.
+     * If is only MSAL, the user will have to add the camera permission to the app manifest
+     * to use QR code + PIN authentication, i.e. <uses-permission android:name="android.permission.CAMERA" />
      * 18 is the code for QR code + PIN authentication on ESTS.
      */
     QR(18, "qrpin");
