@@ -1,5 +1,6 @@
 V.Next
 ---------
+- [PATCH] Handle repeated camera requests. (#2332)
 - [MINOR] Clear active broker cache if the (cached) active broker app doesn't support ipc mechanism (#2331)
 - [MINOR] Add support for CIAM custom domain (#2314)
 - [MINOR] Rename "is QR + PIN available" API to "get preferred auth method". (#2288)
